# Raytracer

./: .gitignore  Camera.cpp  Camera.hpp  Colour.hpp  IMaterial.hpp  IShape.hpp  ITransformation.hpp  Makefile  Material.cpp  Material.hpp  MaterialObject.hpp  Point3D.hpp  README.md  Ray.hpp  Ray3D.cpp  Ray3D.hpp  Sdl2.hpp  ShapeList.cpp  ShapeList.hpp  Sphere.cpp  Sphere.hpp  TransformedShape.hpp  Vector3D.cpp  Vector3D.hpp  example.cfg  main.cpp  pull_request_template.md  test.cfg
.github/ISSUE_TEMPLATE/: add-feature.md  bug_report.md
.github/workflows/: mirror.yml
Bonus/cuda/: CMakeLists.txt
Bonus/cuda/Interfaces/: IShape.hpp
Bonus/cuda/src/: main.cpp  my.hpp
Bonus/cuda/src/Core/: ClusterManagement.hpp  Core.hpp  kernel.cu  kernel.cuh
Bonus/cuda/src/DataRetriever/: Parsing.hpp
Bonus/cuda/src/Graphical/: Sdl2.cpp
Bonus/cuda/src/Materials/: Glass.cpp  Glass.hpp
Bonus/cuda/src/Math/: Point3D.cpp  Ray3D.hpp  Vector3D.hpp
Bonus/cuda/src/Raytracer/: Background.hpp  Camera.hpp
Bonus/cuda/src/Shapes/: CylinderLimited.cpp  ShapeList.cpp  Sphere.hpp  Torus.hpp
Bonus/cuda/src/Transformations/: Scale.hpp
Doc/: Doxyfile
Interfaces/: IError.hpp  IMaterial.hpp  IShape.hpp  ITextures.hpp  ITransformation.hpp
Tests/Include/: MainInclude.hpp
Tests/Templates/: ball.cfg  room.cfg  shapes_config.cfg  test.cfg  transfo_tests.cfg
Tests/src/: MainTests.cpp
src/: main.cpp
src/Core/: ClusterManagement.cpp  ClusterManagement.hpp  Core.cpp  Core.hpp  DLLoader.hpp
src/DataRetriever/: Parsing.cpp  Parsing.hpp
src/Factory/: Factory.cpp  Factory.hpp
(+81 files in other folders)
